--- a/flights/route.yaml
+++ b/flights/route.yaml
@@ -6,6 +6,19 @@ metadata:
 spec:
   entryPoints:
     - web
+  routes:
+    - kind: Rule
+      match: Host(`flights.traefik-airlines`) || Host(`flights.traefik-airlines.localhost`)
+      services:
+        - name: flights-app
+          port: 3000
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: api-ingress-flights-secure
+spec:
+  entryPoints:
     - websecure
   routes:
     - kind: Rule
