--- a/customers/route.yaml
+++ b/customers/route.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: api-ingress-customers
+  name: customers-ingress
 spec:
   entryPoints:
     - web
