--- a/employees/route.yaml
+++ b/employees/route.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: api-ingress-employees
+  name: employees-ingress
 spec:
   entryPoints:
     - web
