--- a/flights/route.yaml
+++ b/flights/route.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: api-ingress-flights
+  name: flights-ingress
 spec:
   entryPoints:
     - web
