--- a/tickets/route.yaml
+++ b/tickets/route.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: api-ingress-tickets
+  name: tickets-ingress
 spec:
   entryPoints:
     - web
