--- a/hub/base/employees/kustomization.yaml
+++ b/hub/base/employees/kustomization.yaml
@@ -1,5 +1,5 @@
 namespace: traefik-airlines
 resources:
-  - ./app.yaml
+  - ../../../apps/employees
   - ./route.yaml
-  - ./oas.yaml
+  - ./api.yaml
