--- a/hub/base/tickets/kustomization.yaml
+++ b/hub/base/tickets/kustomization.yaml
@@ -1,6 +1,5 @@
 namespace: traefik-airlines
 resources:
-  - ./app.yaml
+  - ../../../apps/tickets
   - ./route.yaml
-  - ./oas.yaml
   - ./api.yaml
