--- a/management/plans/platinum.yaml
+++ b/management/plans/platinum.yaml
@@ -2,11 +2,11 @@
 apiVersion: hub.traefik.io/v1alpha1
 kind: APIPlan
 metadata:
-  name: traefik-airlines-gold-plan
+  name: traefik-airlines-platinum-plan
   namespace: traefik-airlines
 spec:
-  title: "Traefik Airlines Gold Plan"
-  description: "Gold rate limits and quotas"
+  title: "Traefik Airlines Platinum Plan"
+  description: "Platinum rate limits and quotas"
   rateLimit:
     limit: 100
     burst: 1000
