--- a/management/dependencies/redis/helmrepository.yaml
+++ b/management/dependencies/redis/helmrepository.yaml
@@ -2,6 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: bitnami
+  namespace: traefik
 spec:
   interval: 10m0s
   url: https://charts.bitnami.com/bitnami
