--- a/management/dependencies/redis/kustomization.yaml
+++ b/management/dependencies/redis/kustomization.yaml
@@ -1,4 +1,5 @@
-namespace: flux-system
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ./helmrepository.yaml
