fix tickets-api in catalog

--- a/management/catalog-items/airlines-customers.yaml
+++ b/management/catalog-items/airlines-customers.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   everyone: true
   apis:
-    - name: ticket-api
+    - name: tickets-api
     - name: flights-api
   apiPlan:
     name: traefik-airlines-bronze-plan
