Update plan ids

--- a/management/managed-subscriptions/employees-subscription.yaml
+++ b/management/managed-subscriptions/employees-subscription.yaml
@@ -12,5 +12,5 @@ spec:
     - name: tickets-api
     - name: customers-api
   apiPlan:
-    name: gold
+    name: traefik-airlines-gold-plan
   weight: 100
