--- a/management/portal.yaml
+++ b/management/portal.yaml
@@ -8,10 +8,6 @@ spec:
   title: Traefik Airlines API Portal
   description: "API Portal for Traefik Airlines"
   trustedUrls:
-    - https://portal.traefik-airlines.aks
-    - https://portal.traefik-airlines.k3d
-    - https://portal.traefik-airlines.eks
-    - https://portal.traefik-airlines.gke
     - https://portal.traefik-airlines.localhost
 ---
 apiVersion: traefik.io/v1alpha1
@@ -25,7 +21,7 @@ spec:
   entryPoints:
     - web
   routes:
-  - match: Host(`portal.traefik-airlines.aks`) || Host(`portal.traefik-airlines.k3d`) || Host(`portal.traefik-airlines.eks`) || Host(`portal.traefik-airlines.gke`) || Host(`portal.traefik-airlines.localhost`)
+  - match: Host(`portal.traefik-airlines.localhost`)
     kind: Rule
     services:
     - name: apiportal
