--- a/management/managed-subscriptions/customers-subscription.yaml
+++ b/management/managed-subscriptions/customers-subscription.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: traefik-airlines
 spec:
   applications:
-    - appId: "customer"
+    - appId: "customers"
   apis:
     - name: customers-api
   apiPlan:
