Update tls entrypoint

--- a/apis/customers/route-tls.yaml
+++ b/apis/customers/route-tls.yaml
@@ -7,7 +7,7 @@ metadata:
     hub.traefik.io/api: customers-api
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
     - kind: Rule
       match: Host(`customers.airlines.EXTERNAL_IP.traefik.me`)
