--- a/apis/employees/route-tls.yaml
+++ b/apis/employees/route-tls.yaml
@@ -7,7 +7,7 @@ metadata:
     hub.traefik.io/api: employees-api
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
     - kind: Rule
       match: Host(`employees.airlines.EXTERNAL_IP.traefik.me`)
