--- a/apis/tickets/route-tls.yaml
+++ b/apis/tickets/route-tls.yaml
@@ -7,7 +7,7 @@ metadata:
     hub.traefik.io/api: tickets-api
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
     - kind: Rule
       match: Host(`tickets.airlines.EXTERNAL_IP.traefik.me`)
