--- a/apps/flights/app.yaml
+++ b/apps/flights/app.yaml
@@ -38,6 +38,13 @@ spec:
             mountPath: /api
           - name: openapi
             mountPath: /public
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
       volumes:
         - name: api-data
           configMap:
