--- a/middlewares/jwt/entraid/employees/route-tls.yaml
+++ b/middlewares/jwt/entraid/employees/route-tls.yaml
@@ -8,7 +8,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`employees.airlines.EXTERNAL_IP.sslip.io`)
+      match: Host(`employees.airlines.traefik.EXTERNAL_IP.sslip.io`)
       services:
         - name: employees-app
           port: 3000
