--- a/middlewares/jwt/entraid/tickets/route.yaml
+++ b/middlewares/jwt/entraid/tickets/route.yaml
@@ -8,7 +8,7 @@ spec:
     - web
   routes:
     - kind: Rule
-      match: Host(`tickets.traefik-airlines`) || Host(`tickets.traefik-airlines.localhost`)
+      match: Host(`tickets.airlines.traefik`) || Host(`tickets.airlines.traefik.localhost`)
       services:
         - name: tickets-app
           port: 3000
