--- a/routes/customers/route.yaml
+++ b/routes/customers/route.yaml
@@ -8,7 +8,7 @@ spec:
     - web
   routes:
     - kind: Rule
-      match: Host(`customers.traefik-airlines`) || Host(`customers.traefik-airlines.localhost`)
+      match: Host(`customers.airlines.traefik`) || Host(`customers.airlines.traefik.localhost`)
       services:
         - name: customers-app
           port: 3000
