--- a/apis/flights/route-tls.yaml
+++ b/apis/flights/route-tls.yaml
@@ -14,5 +14,7 @@ spec:
       services:
         - name: flights-app
           port: 3000
+      middlewares:
+        - name: treblle
   tls:
     certResolver: traefik-airlines
